apps/readflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: readflow
    app.kubernetes.io/name: readflow
  name: readflow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: readflow
      app.kubernetes.io/name: readflow
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: readflow
        app.kubernetes.io/name: readflow
    spec:
      containers:
        - name: readflow
          image: readflow
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
              name: http
              protocol: TCP

          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 5
            initialDelaySeconds: 180
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10

          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          resources:
            limits:
              cpu: 1000m
              memory: 1700Mi
            requests:
              cpu: 25m
              memory: 864Mi
